[package]
name = "lstree"
version = "0.1.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/atdojo/lstree/tree/main"
repository = "https://github.com/atdojo/lstree/tree/main"
license-file = "LICENSE"
keywords = ["ls", "tree"]
categories = ["command-line-utilities"]
description = "ls and tree combined"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
colored = "2"
regex = "1"
chrono = "0.4"
